--- a/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
 
 		<footer class="border-top footer text-muted">
 			<div class="container">
-				&copy; 2023 - Drawing Register
+				<a href="https://github.com/KarolisRakauskas/DrawingRegisterMVC"><i class="bi bi-github text-dark" style="font-size:1.5em"></i></a> Drawing Register
 			</div>
 		</footer>
 
