--- a/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
@@ -115,7 +115,8 @@
 
 		<footer class="border-top footer text-muted">
 			<div class="container">
-				<a href="https://github.com/KarolisRakauskas/DrawingRegisterMVC"><i class="bi bi-github text-dark" style="font-size:1.5em"></i></a> Drawing Register
+				<p class="p-0 m-0"><a href="https://github.com/KarolisRakauskas/DrawingRegisterMVC"><i class="bi bi-github text-dark" style="font-size:1.5em"></i></a>&emsp;
+				<a href="mailto:karolisrakausku@gmail.com" class="text-decoration-none text-dark">karolisrakausku@gmail.com</a></p>
 			</div>
 		</footer>
 
